# tPDwH23qCF-rest-api

./: .gitignore  README.md  pyproject.toml
app/: database.py  insert_data.py  main.py  schemas.py
app/models/: metrics.py  sensors.py
app/routers/: metrics.py  sensors.py
tests/: conftest.py
tests/routers/: test_metrics.py  test_sensors.py
